(lang dune 3.21)

(name currency-conversion-mnemonics)

(generate_opam_files true)

(source
 (github ofsouzap/currency-conversion-mnemonics))

(authors "Ofsouzap <ofsouzap@gmail.com>")

(maintainers "Ofsouzap <ofsouzap@gmail.com>")

(license MIT)

(package
 (name currency-conversion-mnemonics)
 (synopsis "Mnemonics for currency conversions")
 (depends ocaml core zarith ppx_expect ppx_inline_test))
